--- a/m/busi/busi-apply.html
+++ b/m/busi/busi-apply.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>e通</title>
-    <link rel="stylesheet" href="../js/lib/weuijs/style/weuijs.css">
+    <link rel="stylesheet" href="../js/lib/weuijs/style/weuijs.min.css">
     <link rel="stylesheet" href="../css/ui-base.css">
 </head>
 
@@ -27,21 +27,21 @@
     </div>
     <div class="page__content">
         <div class="weui-cells">
-            <a class="weui-cell weui-cell_access" href="acq-busi.html">
+            <a class="weui-cell weui-cell_access" onclick="busi-process()">
                 <div class="weui-cell__hd"><img src="../images/card.png" alt="" style="width:80px;margin-right:5px;display:block"></div>
                 <div class="weui-cell__bd">
                     <p>收单业务</p>
                 </div>
                 <div class="weui-cell__ft"></div>
             </a>
-            <a class="weui-cell weui-cell_access" href="dmf-busi.html">
+            <a class="weui-cell weui-cell_access" onclick="busi-process()">
                 <div class="weui-cell__hd"><img src="../images/yes_license.png" alt="" style="width:80px;margin-right:5px;display:block"></div>
                 <div class="weui-cell__bd">
                     <p>当面付</p>
                 </div>
                 <div class="weui-cell__ft">有营业执照</div>
             </a>
-            <a class="weui-cell weui-cell_access" href="dmf-busi-no-license.html">
+            <a class="weui-cell weui-cell_access" onclick="busi-process()">
                 <div class="weui-cell__hd"><img src="../images/no_license.png" alt="" style="width:80px;margin-right:5px;display:block"></div>
                 <div class="weui-cell__bd">
                     <p>当面付</p>
