--- a/m/busi/credit.html
+++ b/m/busi/credit.html
@@ -120,6 +120,10 @@
 		</div>
 		<!-- 填写商户信息结束 -->
 	</div>
+	<div class="weui-btn-area btn-area">
+		<a id="back-btn" href="javascript:" class="weui-btn weui-btn_default" onclick="weui.page.back()">返回</a>
+		<a id="submit-btn" href="javascript:" class="weui-btn weui-btn_primary">提交</a>
+	</div>
   </form>
 </body>
 </html>
