--- a/m/busi/base-info.html
+++ b/m/busi/base-info.html
@@ -2,13 +2,27 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>商户基本信息</title>
+<link rel="stylesheet" href="../js/lib/weuijs/style/weuijs.min.css">
+<style type="text/css">
+	body {
+		background-color: #f8f8f8;
+	}
+	.required {
+		color: red;
+	}
+	.weui-cell__bd {
+		position: relative;
+	}
+</style>
 </head>
 
 <body>
 	<form id="base-form">
 		<div title="填写基本信息">
-           	<input name="rec_id" type="hide">
+           	<input name="rec_id" type="hidden">
             <!-- 填写基本信息开始 -->
             <div class="weui-cells__title">联系信息</div>
             <div class="weui-cells weui-cells_form">
@@ -82,44 +96,59 @@
 			<a id="submit-btn" href="javascript:" class="weui-btn weui-btn_primary">提交</a>
 		</div>
      </form>
-    <script type="text/javascript" src="//api.map.baidu.com/api?v=2.0&ak=mUs8UNiHRImGLNueae1Gd9PVdejrYdHC"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=mUs8UNiHRImGLNueae1Gd9PVdejrYdHC"></script>
     <script type="text/javascript" src="../js/lib/zepto.min.js"></script>
+    <script type="text/javascript" src="../js/basedir.js"></script>
     <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
 	<script>
 		var query = $$.parseQueryString();
 		var operateType=query.operateType;
-		var step = query.step || 0;
-		if(operateType == 'create') {
-			var flow_tree = _introForPage();
+		function Complete(Step) {
+			var params = "";
+			var key = Step.key;
+			for(var i=0; i<key.length; i++) {
+				var tag = key[i];
+				var value = $('input[name='+key[i]+']').val();
+				params += tag+'='+value+'&';
+			}
+			params += "step="+(++Step.step);
+			return params;
 		}
-
 		function onSubmit() {
 			if (!weui.form.validate('#form', $$.rules)) return;
 			var param = $('#form').serializeObject();
 
-			$$.request('/action/bm/mchnt-base-info/' + operateType, param, {
-				success: function(data) {
-					if (data.errcode == 0) {
-						weui.toast('操作成功', function() {
-							searchPage.search();
-							weui.page.back();
+			//$$.request('/action/bm/mchnt-base-info/' + operateType, param, {
+			//	success: function(data) {
+			//		if (data.errcode == 0) {
+						weui.dialog({
+						  title: '成功',
+						  content: '操作成功，继续下一步？',
+						  className: 'custom-classname',
+						  buttons: [{
+							  label: '取消',
+							  type: 'default',
+							  onClick: function () {}
+						  }, {
+							  label: '确定',
+							  type: 'primary',
+							  onClick: function () { _nextStep(this, query.step, {_Complete:Complete}, {_BeforeChange:function(){alert(111);}}); }
+						  }]
 						});
-					} else {
-						weui.alert(data.errmsg, {
-							title: '提示'
-						});
-					}
-				},
-				error: function() {}
-			});
-			if(flow_tree.length > 0) {
-				_goToStep(flow_tree, step);
-			}
+			//		} else {
+			//			weui.alert(data.errmsg, {
+			//				title: '提示'
+			//			});
+			//		}
+			//	},
+			//	error: function() {}
+			//});
 		}
 
 		$(function() {
 			$('#submit-btn').on('click', onSubmit);
-		}
+		});
+		
 	</script>
 </body>
 </html>
