--- a/m/busi/busi-apply.html
+++ b/m/busi/busi-apply.html
@@ -26,22 +26,23 @@
         </div>
     </div>
     <div class="page__content">
+        <input type="hidden" name="busi_type" id="busi_type">
         <div class="weui-cells">
-            <a class="weui-cell weui-cell_access" onclick="busi-process()">
+            <a class="weui-cell weui-cell_access" onclick="$('#busi_type').val('SD');process()">
                 <div class="weui-cell__hd"><img src="../images/card.png" alt="" style="width:80px;margin-right:5px;display:block"></div>
                 <div class="weui-cell__bd">
                     <p>收单业务</p>
                 </div>
                 <div class="weui-cell__ft"></div>
             </a>
-            <a class="weui-cell weui-cell_access" onclick="busi-process()">
+            <a class="weui-cell weui-cell_access" onclick="$('#busi_type').val('DMF');process()">
                 <div class="weui-cell__hd"><img src="../images/yes_license.png" alt="" style="width:80px;margin-right:5px;display:block"></div>
                 <div class="weui-cell__bd">
                     <p>当面付</p>
                 </div>
                 <div class="weui-cell__ft">有营业执照</div>
             </a>
-            <a class="weui-cell weui-cell_access" onclick="busi-process()">
+            <a class="weui-cell weui-cell_access" onclick="$('#busi_type').val('DMF');process()">
                 <div class="weui-cell__hd"><img src="../images/no_license.png" alt="" style="width:80px;margin-right:5px;display:block"></div>
                 <div class="weui-cell__bd">
                     <p>当面付</p>
@@ -50,7 +51,26 @@
             </a>
         </div>
     </div>
+    <script type="text/javascript" src="../js/lib/zepto.min.js"></script>
+    <script type="text/javascript" src="../js/basedir.js"></script>
+    <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
     <script>
+		var query = $$.parseQueryString();
+		function Complete(Step) {
+			var params = "";
+			var key = Step.key;
+			for(var i=0; i<key.length; i++) {
+				var tag = key[i];
+				var value = $('input[name='+key[i]+']').val();
+				params += tag+'='+value+'&';
+			}
+			params += "step="+(++Step.step);
+			return params;
+		}
+		function process() {
+			_nextStep(this, query.step, {_Complete:Complete}, {});	
+		}
+		
     </script>
 </body>
 
