--- a/m/busi/credit.html
+++ b/m/busi/credit.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title>无标题文档</title>
+<link rel="stylesheet" href="../js/lib/weuijs/style/weuijs.min.css">
 </head>
 
 <body>
   <form>
 	<input name="mchnt_id" type="hidden">
-	<div class="flow__step" title="填写商户信息">
-		<!-- 填写商户信息开始 -->
-		<!-- <div class="weui-cells__title">营业执照</div> -->
 		<div class="weui-cells weui-cells_form">
 			<div class="weui-cell weui-cell_switch">
 				<div class="weui-cell__bd">营业执照</div>
@@ -118,12 +118,60 @@
 				</div>
 			</div>
 		</div>
-		<!-- 填写商户信息结束 -->
-	</div>
 	<div class="weui-btn-area btn-area">
 		<a id="back-btn" href="javascript:" class="weui-btn weui-btn_default" onclick="weui.page.back()">返回</a>
 		<a id="submit-btn" href="javascript:" class="weui-btn weui-btn_primary">提交</a>
 	</div>
   </form>
+	<script type="text/javascript" src="../js/lib/zepto.min.js"></script>
+	<script type="text/javascript" src="../js/basedir.js"></script>
+	<script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
+	<script>
+		var query = $$.parseQueryString();
+		function Complete(Step) {
+			var params = "";
+			var key = Step.key;
+			for(var i=0; i<key.length; i++) {
+				var tag = key[i];
+				var value = $('input[name='+key[i]+']').val();
+				params += tag+'='+value+'&';
+			}
+			params += "step="+(++Step.step);
+			return params;
+		}
+		function onSubmit() {
+			if (!weui.form.validate('#form', $$.rules)) return;
+			var param = $('#form').serializeObject();
+
+			//$$.request('/action/bm/mchnt-base-info/' + operateType, param, {
+			//	success: function(data) {
+			//		if (data.errcode == 0) {
+						weui.dialog({
+						  title: '成功',
+						  content: '操作成功，继续下一步？',
+						  className: 'custom-classname',
+						  buttons: [{
+							  label: '取消',
+							  type: 'default',
+							  onClick: function () {}
+						  }, {
+							  label: '确定',
+							  type: 'primary',
+							  onClick: function () { _nextStep(this, query.step, {_Complete:Complete}, {_BeforeChange:function(){alert(111);}}); }
+						  }]
+						});
+			//		} else {
+			//			weui.alert(data.errmsg, {
+			//				title: '提示'
+			//			});
+			//		}
+			//	},
+			//	error: function() {}
+			//});
+		}
+		$(function() {
+			$('#submit-btn').on('click', onSubmit);
+		});
+    </script>
 </body>
 </html>
