--- a/m/busi/apply-step2.html
+++ b/m/busi/apply-step2.html
@@ -52,6 +52,7 @@
     </script>
     <script>
     var query = $$.parseQueryString();
+	/*
     var searchPage = weui.searchPage('#page1', {
         resultTpl: '#list-template',
         // data: {
@@ -64,6 +65,16 @@
         // },
         loader: function(param, success, error) {
             console.log(arguments);
+			$$.request('/action/bm/busi-type/list', param, {
+				success: function(data) {
+					if (data.errcode == 0) {
+						success(data.rows);
+					} else {
+						weui.alert(data.errmsg, { title: '提示' });
+					}
+				},
+				error: error
+			});
             setTimeout(function() {
                 var rows = [{
                     text: '收单',
@@ -82,6 +93,17 @@
         onClickItem: function(row) {
             console.log(arguments);
             var busiType = row.value;
+			$$.showSelect2(this, {
+                title: '搜索',
+                valueField: 'acq_inst_id',
+                textField: 'acq_inst_nm',
+                url: '/action/bm/acq-inst/search',
+				onClickItem: function(row, target) {
+                    console.log(this, arguments);
+                    var flow = flows.busi(busiType, row.value);
+                    flow.start();
+                }
+            }).search();
             var select2 = weui.select2({
                 title: '搜索收单机构',
                 data: [{
@@ -106,8 +128,59 @@
                 }
             });
         }
-    }).search();
+    }).search(); */
+	
+	var $$.showPage = function(target, options) {
+        options = options || {};
+		
+        options = $.extend({
+			data: options.data || [],
+            loader: function(param, success, error) {
+                var queryParams = $.extend(param, options.queryParams);
 
+                $$.request(options.url, queryParams, {
+                    success: function(data) {
+                        if (data.errcode == 0) {
+                            success(data[options.rowsName]);
+                        } else {
+                            weui.alert(data.errmsg, error, {
+                                title: '提示'
+                            });
+                        }
+                    },
+                    error: function() {
+                        error();
+                    }
+                })
+            },
+            onClickItem: function(row) {}
+        }, options);
+
+        return weui.searchPage(target, options); //.search($target.val());
+    }
+	
+	$$.showPage('#page1', {
+		resultTpl: '#list-template',
+		url: '/action/bm/busi-type/search',
+		queryParams: {},
+		rowsName: 'rows',
+		onClickItem: function(row) {
+            console.log(arguments);
+            var busiType = row.value;
+			$$.showSelect2(this, {
+                title: '搜索',
+                valueField: 'acq_inst_id',
+                textField: 'acq_inst_nm',
+                url: '/action/bm/acq-inst/search',
+				onClickItem: function(row, target) {
+                    console.log(this, arguments);
+                    var flow = flows.busi(busiType, row.value);
+                    flow.start();
+                }
+            }).search();
+		}
+	}).search();
+		
     function showPage2() {
         weui.page.show('#page2');
         searchPage.search();
