--- a/m/busi/apply-step2.html
+++ b/m/busi/apply-step2.html
@@ -52,40 +52,25 @@
     </script>
     <script>
     var query = $$.parseQueryString();
-	/*
+
     var searchPage = weui.searchPage('#page1', {
         resultTpl: '#list-template',
-        // data: {
-        //     rows: [{
-        //         text: '搜索文本'
-        //     }]
-        // },
-        // filter: function(q, row) {
-        //         return row['text'].indexOf(q) == 0;
-        // },
         loader: function(param, success, error) {
             console.log(arguments);
-			$$.request('/action/bm/busi-type/list', param, {
-				success: function(data) {
-					if (data.errcode == 0) {
-						success(data.rows);
-					} else {
-						weui.alert(data.errmsg, { title: '提示' });
-					}
-				},
-				error: error
-			});
-            setTimeout(function() {
-                var rows = [{
-                    text: '收单',
-                    value: 'SD'
-                }, {
-                    text: '扫码',
-                    value: 'SM'
-                }];
-
-                success(rows);
-            }, 200);
+            $$.request('/action/bm/parameter/list', {
+                busi_type: '1'
+            }, {
+                success: function(data) {
+                    if (data.errcode == 0) {
+                        success(data.busi_type);
+                    } else {
+                        weui.alert(data.errmsg, {
+                            title: '提示'
+                        });
+                    }
+                },
+                error: error
+            });
         },
         onInput: function() {
             console.log(arguments);
@@ -93,98 +78,30 @@
         onClickItem: function(row) {
             console.log(arguments);
             var busiType = row.value;
-			$$.showSelect2(this, {
-                title: '搜索',
-                valueField: 'acq_inst_id',
-                textField: 'acq_inst_nm',
-                url: '/action/bm/acq-inst/search',
-				onClickItem: function(row, target) {
-                    console.log(this, arguments);
-                    var flow = flows.busi(busiType, row.value);
-                    flow.start();
-                }
-            }).search();
-            var select2 = weui.select2({
+            weui.select2({
                 title: '搜索收单机构',
-                data: [{
-                    value: '48215500',
-                    text: '湖南通联支付'
-                }],
-                loader: function(param, success, error) {
-                    // TODO ajax
-                    var i = param.total;
-                    success([{
-                        value: i,
-                        text: '搜索文本' + i
-                    }, {
-                        value: i++,
-                        text: '搜索文本' + i
-                    }]);
-                },
-                onClickItem: function(row, target) {
-                    console.log(this, arguments);
-                    var flow = flows.busi(busiType, row.value);
-                    flow.start();
-                }
-            });
-        }
-    }).search(); */
-	
-	var showPage = function(target, options) {
-        options = options || {};
-		
-        options = $.extend({
-			data: options.data || [],
-            loader: function(param, success, error) {
-                var queryParams = $.extend(param, options.queryParams);
-
-                $$.request(options.url, queryParams, {
-                    success: function(data) {
-                        if (data.errcode == 0) {
-                            success(data[options.rowsName]);
-                        } else {
-                            weui.alert(data.errmsg, error, {
-                                title: '提示'
-                            });
-                        }
-                    },
-                    error: function() {
-                        error();
-                    }
-                })
-            },
-            onClickItem: function(row) {}
-        }, options);
-
-        return weui.searchPage(target, options); //.search($target.val());
-    }
-	
-	showPage('#page1', {
-		resultTpl: '#list-template',
-		url: '/action/bm/busi-type/search',
-		queryParams: {},
-		rowsName: 'rows',
-		onClickItem: function(row) {
-            console.log(arguments);
-            var busiType = row.value;
-			$$.showSelect2(this, {
-                title: '搜索',
                 valueField: 'acq_inst_id',
                 textField: 'acq_inst_nm',
-                url: '/action/bm/acq-inst/search',
-				onClickItem: function(row, target) {
-                    console.log(this, arguments);
-                    var flow = flows.busi(busiType, row.value);
-                    flow.start();
+                loader: function(param, success, error) {
+                    $$.request('/action/bm/acq-inst/search', {}, {
+                        success: function(data) {
+                            if (data.errcode == 0) {
+                                success(data.rows);
+                            } else {
+                                weui.alert(data.errmsg, error, {
+                                    title: '提示'
+                                });
+                            }
+                        },
+                        error: error()
+                    })
+                },
+                onClickItem: function(row) {
+                    flows.busi.start(busiType, row.acq_inst_id);
                 }
             }).search();
-		}
-	}).search();
-		
-    function showPage2() {
-        weui.page.show('#page2');
-        searchPage.search();
-    }
+        }
+    }).search();
     </script>
 </body>
 
