--- a/m/busi/apply-step3.html
+++ b/m/busi/apply-step3.html
@@ -17,12 +17,12 @@
             <div class="weui-cells weui-cells_form">
                 <div class="weui-cell">
                     <div class="weui-cell__bd">
-                        <div class="weui-uploader">
+                        <div class="weui-uploader" data-type="yyzzzm">
                             <div class="weui-uploader__hd">
                                 <p class="weui-uploader__title">营业执照正面照片</p>
                             </div>
                             <div class="weui-uploader__bd">
-                                <ul class="weui-uploader__files" id="01">
+                                <ul class="weui-uploader__files">
                                 </ul>
                                 <div class="weui-uploader__input-box">
                                     <input class="weui-uploader__input" type="file" accept="image/*" capture="camera">
@@ -62,12 +62,12 @@
                 </div>
                 <div class="weui-cell">
                     <div class="weui-cell__bd">
-                        <div class="weui-uploader">
+                        <div class="weui-uploader" data-type="sfzzm">
                             <div class="weui-uploader__hd">
                                 <p class="weui-uploader__title">身份证正面照片<span class="required">*</span></p>
                             </div>
                             <div class="weui-uploader__bd">
-                                <ul class="weui-uploader__files" id="03">
+                                <ul class="weui-uploader__files">
                                 </ul>
                                 <div class="weui-uploader__input-box">
                                     <input class="weui-uploader__input" type="file" accept="image/*" capture="camera">
@@ -78,12 +78,12 @@
                 </div>
                 <div class="weui-cell">
                     <div class="weui-cell__bd">
-                        <div class="weui-uploader">
+                        <div class="weui-uploader" data-type="sfzfm">
                             <div class="weui-uploader__hd">
                                 <p class="weui-uploader__title">身份证反面照片</p>
                             </div>
                             <div class="weui-uploader__bd">
-                                <ul class="weui-uploader__files" id="99">
+                                <ul class="weui-uploader__files">
                                 </ul>
                                 <div class="weui-uploader__input-box">
                                     <input class="weui-uploader__input" type="file" accept="image/*" capture="camera">
@@ -124,9 +124,9 @@
 
     var uploaderData = [];
 
-    function initUploader(selector, options) {
-        options = options || {};
-        options = $.extend({
+    function initUploader(selector, elec_info_type) {
+
+        weui.ajaxUploader(selector, {
             url: $$.wrapUrl('/action/upload'),
             auto: true,
             type: 'file',
@@ -138,39 +138,20 @@
             },
             onBeforeSend: function(data, headers) {
                 console.log(this, arguments);
-                if (["image/jpg", "image/jpeg", "image/png", "image/gif"].indexOf(this.type) < 0) {
-                    weui.alert('请上传图片');
-                    return false; // 阻止文件添加
-                }
-                if (this.size > max_size * 1024 * 1024) {
-                    weui.alert('请上传不超过10M的图片');
-                    return false;
-                }
                 // return false; // 阻止文件上传
             },
             onSuccess: function(ret) {
-                console.log(this, ret);;
-            },
-            onError: function(err) {
-                console.log(this, err);
-            }
-        }, options);
-        return weui.ajaxUploader(selector, options);
-    }
-
-    $('.weui-uploader').each(function(i, element) {
-        initUploader(this, {
-            onSuccess: function(ret) {
-                console.log(ret);
-                var elec_info_type = $(this).find('.weui-uploader__files').attr('id');
                 uploaderData.push({
                     status: '1',
                     serverid: ret.serverid,
                     elec_info_type: elec_info_type
                 });
             },
+            onError: function(err) {
+                console.log(this, err);
+            }
         });
-    });
+    }
 
     function onSubmit() {
         if (!weui.form.validate('#form', $$.rules)) return;
@@ -182,15 +163,15 @@
             elec_info.push(uploaderData[id]);
         });
 
-        param.elec_info = elec_info;        
-        param.mchnt_id = query.mchnt_id;
+        param.elec_info = elec_info;
 
-        $$.request('/action/bm/mchnt-base-busi/update-base', param, {
+        param = $.extend({}, query, param);
+
+        $$.request('/action/bm/mchnt-param/save-mchnt', param, {
             success: function(data) {
                 if (data.errcode == 0) {
-                    var flow = flows.busi(query.busi_type, query.acq_inst_id);
-                    flow.next({
-                        mchnt_param_id: data.mchnt_param_id
+                    flows.next({
+                        mchnt_param_id: data.data.mchnt_param_id
                     });
                 } else {
                     weui.alert(data.errmsg, {
@@ -203,6 +184,10 @@
 
     $(function() {
         $('#submit-btn').on('click', onSubmit);
+
+        $('#form').find('.weui-uploader').each(function () {
+            initUploader(this, $(this).attr('data-type'));
+        });        
     });
     </script>
 </body>
