--- a/m/busi/apply-step4.html
+++ b/m/busi/apply-step4.html
@@ -28,12 +28,30 @@
             </div>
             <div class="weui-cell">
                 <div class="weui-cell__bd">
-                    <div class="weui-uploader">
+                    <div class="weui-uploader" data-type="zhzm">
                         <div class="weui-uploader__hd">
                             <p class="weui-uploader__title">账户正面照片<span class="required">*</span></p>
                         </div>
                         <div class="weui-uploader__bd">
-                            <ul class="weui-uploader__files" id="16">
+                            <ul class="weui-uploader__files">
+                                <!-- <li class="weui-uploader__file" style="background-image:url(./images/pic_160.png)"></li>
+                            <li class="weui-uploader__file" style="background-image:url(./images/pic_160.png)"></li>-->
+                            </ul>
+                            <div class="weui-uploader__input-box">
+                                <input class="weui-uploader__input" type="file" accept="image/*" capture="camera">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="weui-cell">
+                <div class="weui-cell__bd">
+                    <div class="weui-uploader" data-type="zhfm">
+                        <div class="weui-uploader__hd">
+                            <p class="weui-uploader__title">账户正面照片</p>
+                        </div>
+                        <div class="weui-uploader__bd">
+                            <ul class="weui-uploader__files">
                                 <!-- <li class="weui-uploader__file" style="background-image:url(./images/pic_160.png)"></li>
                             <li class="weui-uploader__file" style="background-image:url(./images/pic_160.png)"></li>-->
                             </ul>
@@ -78,11 +96,11 @@
                 </div-->
             <div class="weui-cell">
                 <div class="weui-cell__hd">
-                    <label for="" class="weui-label">开户支行<span class="required">*</span></label>
+                    <label class="weui-label">开户支行</label>
                 </div>
                 <div class="weui-cell__bd">
-                    <input class="weui-input" type="text" required="" name="subbranch_name" id="subbranch_name" placeholder="请选择开户支行" readonly>
-                    <input class="for_busi" type="hidden" name="account_bank_branch_cd">
+                    <input class="weui-input" type="text" name="account_bank_branch_nm" placeholder="请选择开户支行" id="account-bank-branch-select2">
+                    <input type="hidden" name="account_bank_branch_cd">
                 </div>
             </div>
         </div>
@@ -99,13 +117,13 @@
     var query = $$.parseQueryString();
     var operateType = query.operateType;
 
-	var uploaderData = [];
+    var uploaderData = [];
 
-    function initUploader(selector, options) {
-		options = options ||{};
-		options = $.extend({
-			url: $$.wrapUrl('/action/upload'),
-			auto: true,
+    function initUploader(selector, elec_info_type) {
+
+        weui.ajaxUploader(selector, {
+            url: $$.wrapUrl('/action/upload'),
+            auto: true,
             type: 'file',
             fileVal: 'file',
             compress: {
@@ -113,62 +131,67 @@
                 height: 1600,
                 quality: 0.92
             },
-			onBeforeSend: function(data, headers) {
-				console.log(this, arguments);
-				if(["image/jpg", "image/jpeg", "image/png", "image/gif"].indexOf(this.type) < 0){
-					weui.alert('请上传图片');
-					return false; // 阻止文件添加
-				}
-				if(this.size > max_size * 1024 * 1024){
-					weui.alert('请上传不超过10M的图片');
-					return false;
-				}
-				// return false; // 阻止文件上传
-			},
-			onSuccess: function (ret) {
-		        console.log(this, ret);;
-		    },
-		    onError: function(err){
-		        console.log(this, err);
-		    }
-		}, options);
-		return weui.ajaxUploader(selector, options);
+            onBeforeSend: function(data, headers) {
+                console.log(this, arguments);
+                // return false; // 阻止文件上传
+            },
+            onSuccess: function(ret) {
+                uploaderData.push({
+                    status: '1',
+                    serverid: ret.serverid,
+                    elec_info_type: elec_info_type
+                });
+            },
+            onError: function(err) {
+                console.log(this, err);
+            }
+        });
     }
-	
-	$('.weui-uploader').each(function(i, element) {
-		initUploader(this, {
-			onSuccess: function (ret) {
-		        console.log(ret);
-				var elec_info_type = $(this).find('.weui-uploader__files').attr('id');
-				uploaderData.push({status:'1', serverid:ret.serverid, elec_info_type: elec_info_type});
-		    },
-		});
-	});
 
     function onSubmit() {
         if (!weui.form.validate('#form', $$.rules)) return;
         var param = $('#form').serializeObject();
-		$.extend(param, {elec_info: uploaderData}, query);
-		$$.request('/action/bm/mchnt-param/update-base', param, {
-			success: function(data) {
-				if (data.errcode == 0) {
-					var flow = flows.busi(query.busi_type, query.acq_inst_id);
-					flow.next();
-				} else {
-					weui.alert(data.errmsg, error, {
-						title: '提示'
-					});
-				}
-			},
-			error: function() {
-				error();
-			}
-		});
-        // TODO ajax
+        var elec_info = [];
+
+        $('#form').find('.weui-uploader__file').forEach(function(item) {
+            var id = parseInt($(item).attr('data-id'));
+            elec_info.push(uploaderData[id]);
+        });
+
+        param.elec_info = elec_info;
+
+        param = $.extend({}, query, param);
+
+        $$.request('/action/bm/mchnt-param/save-account', param, {
+            success: function(data) {
+                if (data.errcode == 0) {
+                    flows.next({
+                        mchnt_param_id: data.data.mchnt_param_id
+                    });
+                } else {
+                    weui.alert(data.errmsg, {
+                        title: '提示'
+                    });
+                }
+            }
+        });
     }
 
     $(function() {
         $('#submit-btn').on('click', onSubmit);
+
+        $('#form').find('.weui-uploader').each(function() {
+            initUploader(this, $(this).attr('data-type'));
+        });
+
+        $('#account-bank-branch-select2').on('focus', function() {
+            $$.showSelect2(this, {
+                title: '搜索开户支行',
+                valueField: 'bank_branch_cd',
+                textField: 'bank_branch_nm',
+                url: '/action/bm/bank-branch/search'
+            }).search();
+        });
     });
     </script>
 </body>
