--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>商户信息</title>
-    <link rel="stylesheet" href="../js/lib/weuijs/style/weuijs.min.css">
-    <link rel="stylesheet" href="../css/ui-base.css">
+    <link rel="stylesheet" href="../../js/lib/weuijs/style/weuijs.min.css">
+    <link rel="stylesheet" href="../../css/ui-base.css">
 </head>
 
 <body>
@@ -116,8 +116,8 @@
         </form>
     </div>
     <!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=mUs8UNiHRImGLNueae1Gd9PVdejrYdHC"></script> -->
-    <script type="text/javascript" src="../js/lib/zepto.min.js"></script>
-    <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
+    <script type="text/javascript" src="../../js/lib/zepto.min.js"></script>
+    <script type="text/javascript" src="../../js/lib/weuijs/weuijs.min.js"></script>
     <script>
     var query = $$.parseQueryString();
     var operateType = query.operateType;
