--- a/m/busi/steps/select-busi.html
+++ b/m/busi/steps/select-busi.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>开通业务</title>
-    <link rel="stylesheet" href="../js/lib/weuijs/style/weuijs.min.css">
-    <link rel="stylesheet" href="../css/ui-base.css">
+    <link rel="stylesheet" href="../../js/lib/weuijs/style/weuijs.min.css">
+    <link rel="stylesheet" href="../../css/ui-base.css">
 </head>
 
 <body>
@@ -36,8 +36,8 @@
         </div>
     </div>
     <!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=mUs8UNiHRImGLNueae1Gd9PVdejrYdHC"></script> -->
-    <script type="text/javascript" src="../js/lib/zepto.min.js"></script>
-    <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
+    <script type="text/javascript" src="../../js/lib/zepto.min.js"></script>
+    <script type="text/javascript" src="../../js/lib/weuijs/weuijs.min.js"></script>
     <script id="list-template" type="text/html">
         {{each rows as row i}}
         <div class="weui-cell weui-cell_access searchbar-result__item" data-index="{{total+i}}">
