--- a/m/index.html
+++ b/m/index.html
@@ -20,7 +20,7 @@
     <div class="weui-tab">
         <div class="weui-tab__panel">
             <div class="weui-grids">
-                <a href="busi/apply-step1.html" class="weui-grid">
+                <a href="busi/steps/base.html" class="weui-grid">
                     <div class="weui-grid__icon">
                         <img src="images/icon_nav_article.png" alt="">
                     </div>
