--- a/m/index.html
+++ b/m/index.html
@@ -32,7 +32,7 @@
                     </div>
                     <p class="weui-grid__label">存量开通业务</p>
                 </a> -->
-                <a href="busi/mchnt-base-info.html" class="weui-grid">
+                <a href="busi/steps/base.html" class="weui-grid">
                     <div class="weui-grid__icon">
                         <img src="images/icon_nav_button.png" alt="">
                     </div>
