--- a/c/index2.html
+++ b/c/index2.html
@@ -6,6 +6,14 @@
     <!-- 引入样式 -->
     <link rel="stylesheet" href="lib/element-ui/theme-default/index.css">
     <style type="text/css">
+    html, body {
+        height: 100%;
+    }
+
+    .layout {
+        height: 100%;
+    }
+
     .layout-ceiling {
         background: #464c5b;
         padding: 10px 0;
