--- a/m/my.html
+++ b/m/my.html
@@ -105,7 +105,7 @@
     function share() {
         if (curent_user) {
             wxOnMenuShare({
-                title: '分享',
+                title: '湖南银信诺信息技术有限公司-' + curent_user.data.mobile,
                 link: window.location.origin + '/p/m/register.html?referral_id=' + curent_user.data.userid
             });
         }
