--- a/m/register.html
+++ b/m/register.html
@@ -66,7 +66,7 @@
                     <label class="weui-label">推荐码</label>
                 </div>
                 <div class="weui-cell__bd">
-                    <input class="weui-input" type="text" required="" placeholder="请输入推荐码" name="referral_id" id="referral_id">
+                    <input class="weui-input" type="text" required="" placeholder="请输入推荐码或推荐人手机" name="referral_id" id="referral_id">
                 </div>
             </div>
             <div class="weui-cell" id="referral-cell">
