--- a/m/busi/mchnt-elec-info.html
+++ b/m/busi/mchnt-elec-info.html
@@ -98,20 +98,20 @@
             <div class="weui-cell__ft">{{row.created_time}}</div>
         </a>
         <!-- <div class="weui-media-box weui-media-box_text">
-            <div class="weui-media-box__desc">{{row.elec_info_type}}</div>
-            <div class="weui-media-box__desc">{{row.status}}</div>
-            <div class="weui-media-box__desc">{{row.checked_reason}}</div>
+            <div class="weui-media-box__desc">证件类型：{{row.elec_info_type}}</div>
+            <div class="weui-media-box__desc">证件状态：{{row.status}}</div>
+            <div class="weui-media-box__desc">审核备注:{{row.checked_reason}}</div>
             <ul class="weui-media-box__info">
-                <li class="weui-media-box__info__meta">{{row.created_time}}</li>
-                <li class="weui-media-box__info__meta weui-media-box__info__meta_extra">{{row.created_by}}</li>
+                <li class="weui-media-box__info__meta">创建时间：{{row.created_time}}</li>
+                <li class="weui-media-box__info__meta weui-media-box__info__meta_extra">创建人：{{row.last_created_by_nm}}</li>
             </ul>
             <ul class="weui-media-box__info" style="margin-top: 0px;">
-                <li class="weui-media-box__info__meta">{{row.last_modified_time}}</li>
-                <li class="weui-media-box__info__meta weui-media-box__info__meta_extra">{{row.last_modified_by}}</li>
+                <li class="weui-media-box__info__meta">修改时间：{{row.last_modified_time}}</li>
+				<li class="weui-media-box__info__meta weui-media-box__info__meta_extra">修改人：{{row.last_modified_by_nm}}</li>
             </ul>
             <ul class="weui-media-box__info" style="margin-top: 0px;">
-                <li class="weui-media-box__info__meta">{{row.last_checked_time}}</li>
-                <li class="weui-media-box__info__meta weui-media-box__info__meta_extra">{{row.last_checked_by}}</li>
+                <li class="weui-media-box__info__meta">审核时间：{{row.last_checked_time}}</li>
+                <li class="weui-media-box__info__meta weui-media-box__info__meta_extra">审核人：{{row.last_checked_by_nm}}</li>
             </ul>
         </div> -->
         {{/each}}
