--- a/m/busi/mchnt-param.html
+++ b/m/busi/mchnt-param.html
@@ -60,7 +60,7 @@
                         <label for="" class="weui-label">业务类型<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
-                        <select class="weui-select" name="busi_type" required="" missingTips="请选择业务类型" id="busi-type">
+                        <select class="weui-select" name="busi_type" required missingTips="请选择业务类型" id="busi-type">
                             <option value="SD">收单</option>
                             <option value="DMF">当面付</option>
                         </select>
@@ -96,7 +96,7 @@
                         <label for="" class="weui-label">账户类型<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
-                        <select class="weui-select" name="account_type" required="" missingTips="请选择证件类型">
+                        <select class="weui-select" name="account_type" required missingTips="请选择证件类型">
                             <option value="1">对私</option>
                             <option value="2">对公</option>
                         </select>
@@ -156,7 +156,7 @@
                         <label for="" class="weui-label">信用卡开关<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
-                        <select class="weui-select" name="credit_flag" required="" missingTips="请选择证件类型">
+                        <select class="weui-select" name="credit_flag" required missingTips="请选择证件类型">
                             <option value="1">开</option>
                             <option value="0">关</option>
                         </select>
@@ -248,7 +248,7 @@
                         <label for="" class="weui-label">参数状态<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
-                        <select class="weui-select" name="status" required="" missingTips="请选择参数状态">
+                        <select class="weui-select" name="status" required missingTips="请选择参数状态">
                             <option value="1">正常</option>
                             <option value="0">注销</option>
                         </select>
@@ -402,21 +402,21 @@
             <div class="weui-cell__ft" style="color:#f6383a;">{{row.proc_st_nm}}</div>
         </a>
         <div class="weui-media-box weui-media-box_text">
-            <div class="weui-media-box__desc">{{row.mchnt_cd}}</div>
-            <div class="weui-media-box__desc">{{row.acq_inst_nm}}</div>
-            <div class="weui-media-box__desc">{{row.account_bank_branch_nm}}</div>
-            <div class="weui-media-box__desc">{{row.checked_reason}}</div>
+            <div class="weui-media-box__desc">商户号：{{row.mchnt_cd}}</div>
+            <div class="weui-media-box__desc">收单机构：{{row.acq_inst_nm}}</div>
+            <div class="weui-media-box__desc">开户行：{{row.account_bank_branch_nm}}</div>
+            <div class="weui-media-box__desc">审核备注：{{row.checked_reason}}</div>
             <ul class="weui-media-box__info">
-                <li class="weui-media-box__info__meta">{{row.created_time}}</li>
-                <li class="weui-media-box__info__meta weui-media-box__info__meta_extra">{{row.created_by}}</li>
+                <li class="weui-media-box__info__meta">创建时间：{{row.created_time}}</li>
+				<li class="weui-media-box__info__meta weui-media-box__info__meta_extra">创建人：{{row.last_created_by_nm}}</li>
             </ul>
             <ul class="weui-media-box__info" style="margin-top: 0px;">
-                <li class="weui-media-box__info__meta">{{row.last_modified_time}}</li>
-                <li class="weui-media-box__info__meta weui-media-box__info__meta_extra">{{row.last_modified_by}}</li>
+                <li class="weui-media-box__info__meta">修改时间：{{row.last_modified_time}}</li>
+				<li class="weui-media-box__info__meta weui-media-box__info__meta_extra">修改人：{{row.last_modified_by_nm}}</li>
             </ul>
             <ul class="weui-media-box__info" style="margin-top: 0px;">
-                <li class="weui-media-box__info__meta">{{row.last_checked_time}}</li>
-                <li class="weui-media-box__info__meta weui-media-box__info__meta_extra">{{row.last_checked_by}}</li>
+                <li class="weui-media-box__info__meta">审核时间：{{row.last_checked_time}}</li>
+                <li class="weui-media-box__info__meta weui-media-box__info__meta_extra">审核人：{{row.last_checked_by_nm}}</li>
             </ul>
         </div>
         {{/each}}
