--- a/m/my.html
+++ b/m/my.html
@@ -44,7 +44,7 @@
                         <p style="color: #999;">￥<span id="unsettled_income">0.00</span></p>
                     </div>
                 </a>
-                <a href="" class="weui-grid">
+                <a href="my/balance.html" class="weui-grid">
                     <div class="weui-grid__icon">
                         <i class="icon-balance"></i>
                     </div>
@@ -53,7 +53,7 @@
                         <p style="color: #999;">￥<span id="available_balance">0.00</span></p>
                     </div>
                 </a>
-                <a href="" class="weui-grid">
+                <a href="my/bank-card.html" class="weui-grid">
                     <div class="weui-grid__icon">
                         <i class="icon-bank-card"></i>
                     </div>
@@ -65,7 +65,7 @@
             </div>
             <br>
             <div class="weui-grids">
-                <a href="" class="weui-grid">
+                <a href="my/merchant.html" class="weui-grid">
                     <div class="weui-grid__icon">
                         <i class="icon-wealth"></i>
                     </div>
@@ -73,7 +73,7 @@
                         <p>我的客户</p>
                     </div>
                 </a>
-                <a href="" class="weui-grid">
+                <a href="my/friend.html" class="weui-grid">
                     <div class="weui-grid__icon">
                         <i class="icon-friend"></i>
                     </div>
@@ -81,9 +81,26 @@
                         <p>我的好友</p>
                     </div>
                 </a>
+                <a href="my/setting.html" class="weui-grid">
+                    <div class="weui-grid__icon">
+                        <i class="icon-setting"></i>
+                    </div>
+                    <div class="weui-grid__label">
+                        <p>设置</p>
+                    </div>
+                </a>
             </div>
+            <!-- <div class="weui-cells">
+                <a class="weui-cell weui-cell_access" href="my/help.html">
+                    <div class="weui-cell__hd"><img src="../images/icon_nav_cell.png" alt="" style="width:20px;margin-right:5px;display:block"></div>
+                    <div class="weui-cell__bd weui-cell_primary">
+                        <p>帮助</p>
+                    </div>
+                    <span class="weui-cell__ft"></span>
+                </a>
+            </div>  -->
         </div>
-        <br>
+        <!--br>
         <div class="weui-cells">
             <a class="weui-cell weui-cell_access" href="change-pwd.html">
                 <div class="weui-cell__bd">
@@ -91,7 +108,7 @@
                 </div>
                 <div class="weui-cell__ft"></div>
             </a>
-        </div>
+        </div-->
         <br>
         <a href="javascript:;" class="weui-btn weui-btn_warn" onclick="logout()">退出</a>
         <div class="weui-tabbar">
