--- a/m/my/change-pwd.html
+++ b/m/my/change-pwd.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>修改密码</title>
-    <link rel="stylesheet" href="js/lib/weuijs/style/weuijs.min.css">
+    <link rel="stylesheet" href="../js/lib/weuijs/style/weuijs.min.css">
 </head>
 
 <body>
@@ -54,9 +54,9 @@
             <a class="weui-btn weui-btn_primary" href="javascript:" id="change-pwd-btn">提交</a>
         </div>
     </form>
-    <script type="text/javascript" src="js/lib/zepto.min.js"></script>
-    <script type="text/javascript" src="js/lib/weuijs/weuijs.min.js"></script>
-    <script type="text/javascript" src="js/lib/jsencrypt.min.js"></script>
+    <script type="text/javascript" src="../js/lib/zepto.min.js"></script>
+    <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
+    <script type="text/javascript" src="../js/lib/jsencrypt.min.js"></script>
     <script type="text/javascript">
     var regexp = {
         regexp: {
