--- a/m/my/merchant.html
+++ b/m/my/merchant.html
@@ -6,9 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>e通</title>
-    <link rel="stylesheet" href="../../lib/weui/style/weui.min.css">
-    <link rel="stylesheet" href="../../lib/weuijs/style/weuijs.css">
-    <link rel="stylesheet" href="../../css/ui-base.css">
+    <link rel="stylesheet" href="../js/lib/weuijs/style/weuijs.min.css">
+    <link rel="stylesheet" href="../css/ui-base.css">
     <style type="text/css">
     /* .cells_access .weui-cell {
           -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -38,11 +37,8 @@
         <div id="merchant-list" class="weui-cells">
         </div>
     </div>
-    <script type="text/javascript" src="../../lib/jweixin-1.0.0.js"></script>
-    <script type="text/javascript" src="../../lib/zepto/zepto.min.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../../lib/art-template/template.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../../lib/weuijs/weuijs.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../../js/base.js" charset="utf-8"></script>
+    <script type="text/javascript" src="../js/lib/zepto.min.js"></script>
+    <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
     <script id="merchant-templ" type="text/html">
         {{each rows as row i}}
         <a class="weui-cell weui-cell_access" href="javascript:;" data-id="{{row.mcht_id}}" data-name="{{row.mcht_name}}">
